# enterprise-rest-service

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
packaging/enterprise-service-1.0.0/: build_info.json
packaging/enterprise-service-1.0.0/config/: config.yaml
packaging/enterprise-service-1.0.0/scripts/: health_check.sh  install.sh  stop.sh  uninstall.sh
scripts/: build.sh  health_check.sh  package.sh  start.sh  stop.sh
src/: main.cpp
tests/unit/: version_test.cpp
